--- a/src/styles/TebTeam.css
+++ b/src/styles/TebTeam.css
@@ -66,6 +66,34 @@
   transform: scale(1); /* Reset scaling when active */
 }
 
+.tournament-select {
+  padding: 0.75rem 1rem;
+  font-size: 1rem;
+  color: var(--primary-color);
+  background: #0b0b10;
+  border: none;
+  border-radius: var(--border-radius);
+  outline: none;
+  margin-top: 0.5rem;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  /* Custom dropdown arrow */
+  background-image: url("data:image/svg+xml,%3Csvg fill='%23ffffff' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7 10l5 5 5-5z'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 1rem center;
+  background-size: 1rem;
+}
+
+/* Filter Section */
+.filter-section {
+  margin-bottom: 2rem;
+}
+.filter-label {
+  font-size: 1.2rem;
+  margin-right: 0.5rem;
+}
+
 /* Responsive Design */
 
 /* Small devices (phones) */
